# pii_scan

./: .gitignore  README.md  analyze_scan_preview.py  dahboard.py  dummy_data_generator.py  fastapi_privacy_scanner_backend.py  mysql_scan.py  oracle_scan.py  package.json  pyproject.toml  test.http
django_frontend/: README.md  manage.py  run.py
django_frontend/piiscan_frontend/: asgi.py  settings.py  urls.py  wsgi.py
django_frontend/scanner_frontend/: __init__.py  api.py  models.py  urls.py  views.py
django_frontend/static/css/: globals.css  output.css
django_frontend/templates/scanner_frontend/: base.html  database_configs.html  index.html  scan_jobs.html  scan_results.html
pii_frontend/: package-lock.json  package.json
pii_frontend/src/app/: globals.css  layout.tsx  page.tsx
pii_frontend/src/app/analytics/: page.tsx
pii_frontend/src/app/jobs/: page.tsx
pii_frontend/src/app/patterns/: page.tsx
pii_frontend/src/app/reports/: page.tsx
pii_frontend/src/app/scan/: page.tsx
pii_frontend/src/app/settings/: page.tsx
pii_frontend/src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
pii_frontend/src/components/ui/: scroll-area.tsx  toast.tsx  use-toast.ts
pii_frontend/src/contexts/: ApiContext.tsx
pii_frontend/src/lib/: api.ts
